add-expense-modal component added

--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -16,6 +16,6 @@
       </button>
   </mat-menu>
 </cdk-virtual-scroll-viewport>
-<button mat-fab class="fab-bottom-right" aria-label="add new expense" (click)="editExpense()">
+<button mat-fab class="fab-bottom-right" aria-label="add new expense" (click)="addExpense()">
   <mat-icon>note_add</mat-icon>
 </button>
