--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="toolbar-button-row ">
   <span>Splitspends</span>
   <span class="toolbar-spacer"></span>
-  <button mat-raised-button (click)="navigateToRegister()">
+  <button mat-raised-button class="e2e-login-register" (click)="navigateToRegister()">
     <mat-icon>person_add</mat-icon>Register
   </button>
 </mat-toolbar>
@@ -16,16 +16,16 @@
     <form class="example-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username" formControlName="email">
+          <input class="e2e-login-username" matInput placeholder="Username" formControlName="email">
           <mat-error *ngIf="submitted && f['email'].errors">email is required</mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password" formControlName="password" type="password">
+          <input class="e2e-login-password" matInput placeholder="Password" formControlName="password" type="password">
           <mat-error *ngIf="submitted && f['password'].errors">Password is required</mat-error>
         </mat-form-field>
       </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block">Log in</button>
+      <button mat-stroked-button color="accent" class="btn-block e2e-login-submit">Log in</button>
     </form>
     <hr>
     <app-social></app-social>
